[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cheese Toast 400.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/in_game_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="in_game_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.517647, 0.964706, 1, 0.454902 )

[node name="main_menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 80, 60 )

[node name="ColorRect" type="ColorRect" parent="main_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.223529, 0.223529, 0.454902 )

[node name="Play" type="Button" parent="main_menu/ColorRect"]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_right = 45.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="Menu" type="Button" parent="main_menu/ColorRect"]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -14.5
margin_right = 45.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 2 )
text = "Menu"
flat = true

[node name="Exit" type="Button" parent="main_menu/ColorRect"]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -29.0
margin_right = 45.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true

[connection signal="pressed" from="main_menu/ColorRect/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="main_menu/ColorRect/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="main_menu/ColorRect/Exit" to="." method="_on_Exit_pressed"]
